[gd_scene load_steps=31 format=3 uid="uid://nc13qkvh44n8"]

[ext_resource type="Script" uid="uid://c11lrniyybnth" path="res://units/worker_test.gd" id="1_5wgk8"]
[ext_resource type="Texture2D" uid="uid://cl20jbmxo2aly" path="res://assets/first_unit1-caryng clay.png" id="2_uuc61"]
[ext_resource type="Texture2D" uid="uid://bvc0wrt80v342" path="res://assets/first_unit1.png" id="2_xfh2f"]
[ext_resource type="Texture2D" uid="uid://cibxygbvsomtx" path="res://assets/first_unit2.png" id="3_lclv8"]
[ext_resource type="Texture2D" uid="uid://chm5f3xq2ctoi" path="res://assets/first_unit3.png" id="5_7vyah"]
[ext_resource type="Texture2D" uid="uid://du2bykppsiakb" path="res://assets/unit_run.png" id="5_d54e6"]
[ext_resource type="Texture2D" uid="uid://d0aafijjiueni" path="res://assets/first_unit4.png" id="6_bvm1e"]
[ext_resource type="Texture2D" uid="uid://b4vtkbp2anaje" path="res://assets/first_unit5.png" id="7_21c7e"]
[ext_resource type="Texture2D" uid="uid://cohj0tfcy07qs" path="res://assets/first_unit6.png" id="8_ds8hi"]
[ext_resource type="Texture2D" uid="uid://ifkeqmo03ts6" path="res://assets/first_unit7.png" id="9_w827v"]
[ext_resource type="Texture2D" uid="uid://2imtatnqybgn" path="res://assets/first_unit8.png" id="10_2irtb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d54e6"]
atlas = ExtResource("2_uuc61")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cr5d"]
atlas = ExtResource("2_uuc61")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_753ax"]
atlas = ExtResource("2_uuc61")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcju4"]
atlas = ExtResource("2_uuc61")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru8v3"]
atlas = ExtResource("2_uuc61")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vyah"]
atlas = ExtResource("2_uuc61")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvm1e"]
atlas = ExtResource("2_uuc61")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_21c7e"]
atlas = ExtResource("2_uuc61")
region = Rect2(56, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds8hi"]
atlas = ExtResource("5_d54e6")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_w827v"]
atlas = ExtResource("5_d54e6")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2irtb"]
atlas = ExtResource("5_d54e6")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a1bg"]
atlas = ExtResource("5_d54e6")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbdoj"]
atlas = ExtResource("5_d54e6")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfyea"]
atlas = ExtResource("5_d54e6")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ra0h"]
atlas = ExtResource("5_d54e6")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkgd6"]
atlas = ExtResource("5_d54e6")
region = Rect2(56, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_w2aj3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d54e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cr5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_753ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcju4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru8v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vyah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvm1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21c7e")
}],
"loop": true,
"name": &"caring",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xfh2f")
}, {
"duration": 1.0,
"texture": ExtResource("3_lclv8")
}, {
"duration": 1.0,
"texture": ExtResource("5_7vyah")
}, {
"duration": 1.0,
"texture": ExtResource("6_bvm1e")
}, {
"duration": 1.0,
"texture": ExtResource("7_21c7e")
}, {
"duration": 1.0,
"texture": ExtResource("8_ds8hi")
}, {
"duration": 1.0,
"texture": ExtResource("9_w827v")
}, {
"duration": 1.0,
"texture": ExtResource("10_2irtb")
}],
"loop": true,
"name": &"gadering",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds8hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w827v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2irtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a1bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbdoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfyea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ra0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkgd6")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxn8b"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgjoe"]

[node name="worker" type="CharacterBody2D"]
position = Vector2(0, -7)
script = ExtResource("1_5wgk8")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_w2aj3")
animation = &"gadering"
autoplay = "gadering"
frame_progress = 0.169529

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jxn8b")

[node name="hit box" type="Area2D" parent="." groups=["unit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit box"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_hgjoe")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="hit box" to="." method="_on_hit_box_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
